Revert "List articles, SonarLint and Unit Test"
This reverts commit 21eb60b95e9afe17c19ab5201f8a715bf1bce321.