@@ -7,7 +7,11 @@ import com.microservicio.stock.domain.util.pageable.PageCustom;
 import com.microservicio.stock.domain.util.pageable.PageRequestCustom;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import java.util.Arrays;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -15,60 +19,68 @@ import static org.mockito.Mockito.*;
 
 class CategoryServiceTest {
 
+    @Mock
     private CategoryOut categoryOut;
+
+    @InjectMocks
     private CategoryService categoryService;
 
     @BeforeEach
     void setUp() {
-        categoryOut = mock(CategoryOut.class);
-        categoryService = new CategoryService(categoryOut);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
     void testCreateCategory_Success() {
-        when(categoryOut.existByName("New Category")).thenReturn(false);
-        Category categoryToSave = new Category(null, "New Category", "New Description");
-        when(categoryOut.save(any(Category.class))).thenReturn(categoryToSave);
+        String name = "Electronics";
+        String description = "All electronic items";
 
-        Category result = categoryService.createCategory("New Category", "New Description");
+        when(categoryOut.existByName(name)).thenReturn(false);
+        when(categoryOut.save(any(Category.class))).thenReturn(new Category(1L, name, description));
 
-        verify(categoryOut).existByName("New Category");
-        verify(categoryOut).save(any(Category.class));
+        Category result = categoryService.createCategory(name, description);
 
         assertNotNull(result);
-        assertEquals("New Category", result.getName());
-        assertEquals("New Description", result.getDescription());
+        assertEquals(name, result.getName());
+        assertEquals(description, result.getDescription());
     }
 
     @Test
-    void testCreateCategory_InvalidNameException() {
-        when(categoryOut.existByName("Existing Category")).thenReturn(true);
+    void testCreateCategory_NameAlreadyExists() {
+        String name = "Electronics";
+        String description = "All electronic items";
+
+        when(categoryOut.existByName(name)).thenReturn(true);
 
         InvalidNameExceptionMe exception = assertThrows(InvalidNameExceptionMe.class, () -> {
-            categoryService.createCategory("Existing Category", "Description");
+            categoryService.createCategory(name, description);
         });
 
         assertEquals("El nombre de la categoria ya existe", exception.getMessage());
-        verify(categoryOut).existByName("Existing Category");
-        verify(categoryOut, never()).save(any(Category.class));
     }
 
     @Test
     void testListCategory_Success() {
-        List<Category> categories = Arrays.asList(
-                new Category(1L, "Category1", "Description1"),
-                new Category(2L, "Category2", "Description2")
-        );
+        List<Category> categories = List.of(new Category(1L, "Books", "All kinds of books"), new Category(2L, "Electronics", "All electronic items"));
         when(categoryOut.findAll()).thenReturn(categories);
 
-        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 2,true);
-
+        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 10, true);
         PageCustom<Category> result = categoryService.listCategory(pageRequestCustom);
 
-        verify(categoryOut).findAll();
+        assertNotNull(result);
+        assertEquals(2, result.getTotalElements());
+        assertEquals(1, result.getTotalPages());
+    }
+
+    @Test
+    void testListCategory_Empty() {
+        when(categoryOut.findAll()).thenReturn(Collections.emptyList());
+
+        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 10, true);
+        PageCustom<Category> result = categoryService.listCategory(pageRequestCustom);
 
         assertNotNull(result);
-        assertEquals(2, result.getContent().size());
-        assertEquals("Category1", result.getContent().get(0).getName());
+        assertEquals(0, result.getTotalElements());
+        assertEquals(0, result.getTotalPages());
     }
 }
